--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -200,50 +200,42 @@ header {
   }
 }
 
-#lupa {
-  position: fixed;
+.boxPesquisa{
+  position: relative;
   display: flex;
+  width: 70%;
+  left: 49vw;
   justify-content: center;
-  top: 20px;
-  width: 28px;
-  height: 28px;
-  right: 120px;
-  cursor: pointer;
-  color: #ffffff;
-  text-decoration: none;
-  z-index: 1;
-  border-radius: 20px;
+  transform: translate(-51vw);
 }
 
 .pesquisa::-webkit-input-placeholder{
-  color: rgb(44, 44, 44);
+  color: rgba(215, 215, 215, 0.392);
 }
 
 .pesquisa {
-  position: absolute;
-  background-color: rgba(255, 0, 0, 0);
-  right: 120px;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0);
+  color: #fff;
   top: 18px;
-  width: 5px;
+  width: 60%;
   height: 25px;
   border: none;
   transition: 0.5s;
-  border-radius: 150px;
-  padding-left: 22px;
-  border: 1px solid rgb(255, 255, 255);
+  padding-left: 12px;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 #lupas {
-  position: fixed;
+  position: relative;
   display: flex;
   justify-content: center;
-  top: 17px;
+  color: #ff0000;
+  top: 20px;
   width: 28px;
   height: 28px;
-  right: 118px;
   cursor: pointer;
   text-decoration: none;
-  z-index: 2;
   border-radius: 20px;
 }
 
@@ -364,7 +356,6 @@ header {
 }
 
 .produto-single {
-  /*Container com todos os dados do produto*/
   position: relative;
   display: flex;
   top: 5px;
@@ -430,6 +421,7 @@ transition: 0.8s;
   font-size: 50px;
   display: block;
 }
+
 a {
   color: #2a2a2a;
 }
@@ -446,11 +438,9 @@ a {
   font-size: 25px;
 }
 
-
-
 .produto-remover {
   position: absolute;
-  background-color: rgb(0, 119, 255);
+  background-color: rgb(201, 201, 201);
   text-align: center;
   width: 30px;
   height: 60px;
@@ -469,79 +459,8 @@ a {
   left: 170px;
 }
 
-@media screen and (max-width: 500px) {
-
-  .logo {
-  display: none;
-  }
-
-  .carrinho:hover+.compra {
-    transition: 0.4s;
-    top: 50px;
-    width: 300px;
-    height: 100vh;
-    z-index: -3;
-  }
-
-  .compra:hover {
-    transition: 0.4s;
-    top: 50px;
-    width: 20vw;
-    height: 100vh;
-    z-index: -3;
-  }
-
-  #lupa {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    top: 20px;
-    width: 30px;
-    height: 26px;
-    right: 120px;
-    cursor: pointer;
-    color: #000000;
-    text-decoration: none;
-    z-index: 2;
-  }
-
-  #lupa:hover {
-    border-collapse: 2px;
-    border-bottom: none;
-  }
-
-  .pesquisa {
-    position: absolute;
-    background-color: rgb(255, 255, 255);
-    top: 15px;
-    width: 3vw;
-    height: 30px;
-    border: none;
-    transition: 0.4s;
-    border-radius: 150px;
-    padding-left: 20px;
-    right: 120px;
-  }
-
-  .pesquisa::placeholder{
-    color: rgba(255, 0, 0, 0);
-  }
-
-  #ativaPesquisa {
+@media screen and (max-width: 700px) {
+  .logo{
     display: none;
   }
-
-  #ativaPesquisa:checked~.pesquisa {
-    width: 47vw;
-    height: 30px;
-    transition: 0.3s;
-  }
-  #ativaPesquisa:checked~::placeholder{
-    text-indent: 0%;
-    color: rgb(97, 97, 97);
-  }
-
-
-
-
 }
