--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,47 +1,40 @@
 <header>
   <span class="menuAtivo" [ngStyle]="{ 'z-index': this.zindexMenuAtivo }"></span>
   <span class="menuInativo" [ngStyle]="{ 'z-index': this.zindexMenuInativo }"></span>
+  <span class="atalhosFundo" [ngStyle]="{ 'width': this.width5 + '%' , 'z-index': this.zindex }"></span>
 
   <div class="menu2">
-    <div class="line1"
-      [ngStyle]="{ 'top': this.top1 + 'px' , 'transition': transition + 's' , 'transform': transform1 , 'width': width1 + 'px'}">
-    </div>
+    <div class="line1" [ngStyle]="{ 'top': this.top1 + 'px' , 'transition': transition + 's' , 'transform': transform1 , 'width': width1 + 'px'}"></div>
     <div class="line2" [ngStyle]="{ 'display': this.display , 'transition': transition + 's' }"></div>
-    <div class="line3"
-      [ngStyle]="{ 'top': this.top3 + 'px' , 'transition': transition + 's' , 'transform': transform3 , 'width': width3 + 'px'}">
-    </div>
+    <div class="line3" [ngStyle]="{ 'top': this.top3 + 'px' , 'transition': transition + 's' , 'transform': transform3 , 'width': width3 + 'px'}"></div>
   </div>
 
   <div class="atalhos" [ngStyle]="{ 'width': this.width4 + 'px' }">
     <span class="categorias">CATEGORIAS</span>
     <ul class="li" *ngFor="let categoria of categorias">
-
       <li class="ul1" [routerLink]="['/categoria']" routerLinkActive="router-link-active">{{ categoria.categoria }}</li>
-
     </ul>
   </div>
 
-  <span class="atalhosFundo"
-    [ngStyle]="{ 'width': this.width5 + '%' , 'z-index': this.zindex , 'background-color': this.fundo , 'opacity': this.opacity }"></span>
-
-  <a [routerLink]="['/home']">
+  <a class="logo" [routerLink]="['/home']">
     <div class="logo">
       <img src="assets/img/LogoFundo.png" alt="Ello Cell" id="LogoFundo" />
       <img src="assets/img/logoRaio.png" alt="Raio" id="Raio" />
     </div>
   </a>
 
-  <span class="material-symbols-outlined" id="lupas" [ngStyle]="{'z-index': zindexMenuAtivo }"></span>
-  <span class="material-symbols-outlined" id="lupa"
-    [ngStyle]="{'z-index': zindexMenuInativo  , 'color': this.color }">search</span>
+  <span class="boxPesquisa">
+    <input type="text" class="pesquisa" id="busca" placeholder="Digite o nome do produto">
+    <span class="material-symbols-outlined" id="lupas">search</span>
+  </span>
 
-  <input type="text" class="pesquisa" id="busca" placeholder="Digite o nome do produto"
-    [ngStyle]="{ 'width': this.width6 + '%' , 'background-color': backgroundcolor , 'transition': transition + 's' , 'border': border }">
+
 
   <a class="login" [routerLink]="['/login']">
     <span class="material-symbols-outlined" id="login">person</span>
   </a>
-  <a class="carrinho" [routerLink]="['/shop']">
-    <span class="material-symbols-outlined" id="carrinho">shopping_cart</span>
+  <a class="carrinho">
+    <div class="qItens">{{obterTotalItens()}}</div>
+    <span class="material-symbols-outlined" id="carrinho">shopping_cart_checkout</span>
   </a>
 </header>
