--- a/frontend/src/app/components/views/home/home.component.html
+++ b/frontend/src/app/components/views/home/home.component.html
@@ -1,35 +1,34 @@
 <main>
-  <span class="nomeProduto">Novidades</span>
 
-  <!--inicio do cards de produtos-->
-
-  <div class="carrossel1">
-    <div class="protutos-carrossel1" [ngStyle]="{ 'left': left + 'px' , 'width': width + 'px' }">
-      <div class="card1" id="card1" *ngFor="let card1 of cards">
-        <a [routerLink]="['/produtos', this.card1.id_produto]" routerLinkActive="router-link-active">
-          <span class="produto-img"><img [attr.src]="'http://localhost:3000/' + card1.produto_imagem" alt="" /></span>
-          <span class="produto-descricao">{{ card1.descricao }}</span>
-          <span class="produto-id">{{card1.id_produto}}</span>
-          <span class="produto-preco">{{ card1.preco | currency : "BRL" }}</span>
-          <span class="produto-estoque">ESTOQUE: {{ card1.estoque }}</span>
-        </a>
+  <div class="carrossel">
+    <div class="carrossel1">
+      <span class="nomeProduto">Novidades</span>
+      <div class="protutos-carrossel1" [ngStyle]="{ 'left': left + 'px' , 'width': width + 'px' }">
+        <div class="card1" id="card1" *ngFor="let card1 of cards">
+          <a [routerLink]="['/produtos', this.card1.id_produto]" routerLinkActive="router-link-active">
+            <span class="produto-img"><img [attr.src]="'http://localhost:3000/' + card1.produto_imagem" alt="" /></span>
+            <span class="produto-descricao">{{ card1.descricao }}</span>
+            <span class="produto-id">{{card1.id_produto}}</span>
+            <span class="produto-preco">{{ card1.preco | currency : "BRL" }}</span>
+            <span class="produto-estoque">ESTOQUE: {{ card1.estoque }}</span>
+          </a>
+        </div>
       </div>
     </div>
+    <button class="manual-bt1" id="bt-1">
+      <img src="assets/img/esquerda.png" id="img" />
+    </button>
+    <button class="manual-bt2" id="bt-4">
+      <img src="assets/img/direita.png" id="img" />
+    </button>
   </div>
-  <button class="manual-bt1" id="bt-1">
-    <img src="assets/img/esquerda.png" id="img" />
-  </button>
-  <button class="manual-bt2" id="bt-4">
-    <img src="assets/img/direita.png" id="img" />
-  </button>
 
-  <!--fim do cards-->
+
+  <app-carrinho-compras></app-carrinho-compras>
 
   <span class="QuantprodutosLoja">
     <span class="prod">{{ getQuantidade() }}</span>
   </span>
-
-  <!--inicio da div todosProdutos-->
 
   <div class="todosProdutos" id="single">
     <div class="produto-single" *ngFor="let produto of produtos">
@@ -43,11 +42,10 @@
         <div class="produto-preco">{{ produto.preco | currency : "BRL" }}</div>
         <span class="produto-quantidade">Estoque: {{ produto.quantidade }}</span>
       </a>
-      <button class="produto-adicionar" (click)="homeAdd( produto['id_produto'] )"> + </button>
-      <button class="produto-remover" (click)="remover( produto['id_produto'] )"> - </button>
+      <button class="material-symbols-outlined" id="produto-adicionar"
+        (click)="adicionarAoCarrinho(produto['id_produto'])"> add_circle </button>
     </div>
   </div>
-  <!--fim da div todosProdutos-->
 
   <span class="QuantprodutosLoja2">
 
@@ -60,16 +58,14 @@
       <option value="p4">64</option>
     </select>
 
-    <!--paginação de produtos-->
     <section id="paginacao">
       <div class="pagination">
         <button class="inicio" id="button">&#171;</button>
         <button class="anterior" id="button">&lt;</button>
-        <div class="numeros" id="button2" ></div>
+        <div class="numeros" id="button2"></div>
         <button class="proximo" id="button">&gt;</button>
         <button class="final" id="button">&#187;</button>
       </div>
     </section>
-    <!--paginação de produtos-->
   </span>
 </main>
