--- a/frontend/src/app/components/views/home/home.component.html
+++ b/frontend/src/app/components/views/home/home.component.html
@@ -23,11 +23,11 @@
     </button>
   </div>
 
-
+  <app-category></app-category>
   <app-carrinho-compras></app-carrinho-compras>
 
   <span class="QuantprodutosLoja">
-    <span class="prod">{{ getQuantidade() }}</span>
+    <span class="prod1">{{ getQuantidade() }}</span>
   </span>
 
   <div class="todosProdutos" id="single">
