--- a/frontend/src/app/components/views/produtos/produtos.component.html
+++ b/frontend/src/app/components/views/produtos/produtos.component.html
@@ -1,11 +1,7 @@
 <main>
-  <span class="QuantprodutosLoja">
-    <span class="prod">{{ getQuantidade() + " Produtos" }}</span>
-  </span>
 
-  <!--inicio da div todosProdutos-->
-  <div class="todosProdutos" id="single">
     <div class="produto-single" *ngFor="let produto of produtos">
+      <a [routerLink]="['/produtos', this.produto.id_produto]">
         <div class="produto-img">
           <img class="img" [attr.src]="'http://localhost:3000/' + produto.produto_imagem" alt="img" />
         </div>
@@ -14,11 +10,9 @@
         <div class="produto-descricao">{{ produto.descricao }}</div>
         <div class="produto-preco">{{ produto.preco | currency : "BRL" }}</div>
         <span class="produto-quantidade">Estoque: {{ produto.quantidade }}</span>
-      <button class="produto-adicionar">{{' + '}}</button>
-      <button class="produto-remover">{{' - '}}</button>
-      <!--<button class="produto-adicionar" (click)="adicionar($event)">{{produto.id_produto-1}}</button>-->
-      <!--<button class="produto-remover" (click)="remover($event)">{{produto.id_produto-1}}</button>-->
+      </a>
+      <button class="material-symbols-outlined" id="produto-adicionar"
+        (click)="adicionarAoCarrinho(produto['id_produto'])"> add_circle </button>
     </div>
-  </div>
-  <!--fim da div todosProdutos-->
+  
 </main>
