--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,7 +7,7 @@
 
 
   html, body {
-    height: 2463px;
+    height: 100vh;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
   }
