--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -3,7 +3,7 @@
 footer {
   position: relative;
   width: 100vw;
-  height: 290px;
+  height: 310px;
   left: 0;
   bottom: 0;
   border-top: 1px solid rgba(255, 255, 255, 0.675);
@@ -107,7 +107,8 @@ footer {
 
 .place {
   width: 100%;
-  height: 60px;
+  height: 80px;
+  padding: auto;
 }
 
 .phone{
@@ -225,19 +226,23 @@ footer {
   text-decoration: underline;
 }
 
-@media screen and (max-width: 500px) {
+.text{
+  font-size: 10px;
+}
+
+@media screen and (max-width: 1100px) {
 
   footer {
     position: relative;
     width: 100vw;
-    height: 750px;
+    height: 765px;
     left: 0;
     bottom: 0;
   }
 
   .main-content {
     display: block;
-    height: 700px;
+    height: 720px;
     background-color: rgb(255, 255, 255);
     color: #6a6a6a;
   }
