--- a/frontend/src/app/components/views/carrinho-compras/carrinho-compras.component.css
+++ b/frontend/src/app/components/views/carrinho-compras/carrinho-compras.component.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Oswald&family=Yanone+Kaffeesatz:wght@500&display=swap');
 .compra {
   position: fixed;
   padding: 0;
@@ -6,43 +5,32 @@
   background-color: #ffffff;
   top: 50px;
   right: 0;
-  height: 100vh;
+  height: 94vh;
   transition: 0.4s;
   z-index: 95;
   border-left: solid 1px rgb(255, 221, 0);
+  user-select:none;
 }
 
 .compra::-webkit-scrollbar {
-
+  display: none;
 }
 
-.compra:hover {
-  transition: 0.4s;
-  width: 30vw;
-}
-
-.compra #itens {
-  display: inline-block;
-  width: 100%;
-  text-align: left;
-  padding: 50px 20px 10px 20px;
-  margin: 0px 0px 10px 10px;
-  color: rgb(52, 52, 52);
-  border-bottom: 1px solid rgb(255, 221, 0);
-}
-
-.produto-quantidade {
+.gradeProdutos {
   position: relative;
-  top: 10px;
-  left: -20px;
-  font-size: 12px;
+  height: 60%;
+  margin: 0px 0px 0px 5px;
+  border-top: solid 1px rgb(255, 221, 0);
+  border-bottom: solid 1px rgb(255, 221, 0);
 }
 
 .produto-single {
   position: relative;
+  user-select:none;
   display: flex;
+  padding: auto;
   top: 5px;
-  width: 25vw;
+  width: 260px;
   height: 60px;
   margin: 15px;
   margin-top: 2px;
@@ -60,22 +48,24 @@
 .produto-img img {
   border-radius: 08px;
   position: absolute;
-  max-width: 100%;
-  max-height: 94%;
-  top: 5px;
-  left: 5px;
+  padding: 0;
+  border: 5px;
+  width: 60px;
+  height: 60px;
   display: flex;
   transition: 0.8s;
+  user-select: none;
 }
 
 .produto-descricao {
   position: absolute;
-  max-width: 100%;
-  max-height: 50%;
+  width: 120px;
+  height: 24px;
   font-size: 10px;
-  left: 101px;
-  top: 10px;
+  left: 62px;
+  top: 5px;
   display: block;
+  user-select: none;
 }
 
 .divisao {
@@ -85,31 +75,56 @@
   width: 55%;
   height: 10px;
   border-bottom: 1px solid rgb(231, 231, 231);
+  user-select: none;
 }
-
 
 .produto-preco {
   position: absolute;
-  max-width: 100%;
-  height: 60px;
-  left: 101px;
-  top: 40px;
+  width: 80px;
+  height: 24px;
+  left: 62px;
+  top: 38px;
   font-size: 15px;
   display: block;
+  user-select: none;
 }
 
-#material {
+#adicionar {
   position: absolute;
   text-align: center;
   border: transparent;
   background-color: transparent;
-  width: 75px;
-  height: 55px;
-  right: -16px;
-  top: 20px;
+  width: 30px;
+  height: 35px;
+  right: 10px;
+  top: 30px;
   font-size: 25px;
-  border-radius: 10%;
-  color: red;
+  border-radius: 50%;
+  color: rgb(122, 122, 122);
+  user-select: none;
+}
+
+#adicionar:active {
+  transform: scale(0.9);
+}
+
+#remover {
+  position: absolute;
+  text-align: center;
+  border: transparent;
+  background-color: transparent;
+  width: 30px;
+  height: 35px;
+  right: 50px;
+  top: 30px;
+  font-size: 25px;
+  border-radius: 50%;
+  color: rgb(122, 122, 122);
+  user-select: none;
+}
+
+#remover:active {
+  transform: scale(0.9);
 }
 
 .fundo {
@@ -122,12 +137,124 @@
   z-index: 94;
 }
 
-.qItens {
-position: absolute;
-display: flex;
-top: 50px;
-left: 300px;
-color: rgb(52, 52, 52);
+.produto-quantidade {
+  position: relative;
+  top: 10px;
+  height: 20px;
+  left: -20px;
+  font-size: 12px;
+  user-select: none;
+}
+
+#limpar {
+  position: relative;
+  user-select: none;
+  text-align: center;
+  display: inline-block;
+  padding-top: 5px;
+  border-radius: 5%;
+  width: 40px;
+  height: 40px;
+  top: -20px;
+  left: 230px;
+  cursor: pointer;
+  color: red;
+  font-size: 35px;
+}
+
+#limpar:active {
+  transform: scale(0.9);
+}
+
+.cep {
+  position: relative;
+  display: block;
+  width: 140px;
+  height: 20px;
+  top: 15px;
+  left: 5px;
+  color: rgb(52, 52, 52);
+}
+
+.rua {
+  position: relative;
+  display: block;
+  width: 140px;
+  height: 20px;
+  font-size: 10px;
+  top: -30px;
+  left: 5px;
+  color: rgb(52, 52, 52);
+}
+
+.cidade {
+  position: relative;
+  display: block;
+  width: 140px;
+  height: 20px;
+  font-size: 12px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  top: -35px;
+  left: 5px;
+  color: rgb(52, 52, 52);
+}
+
+.frete {
+  position: relative;
+  display: block;
+  width: 140px;
+  height: 20px;
+  top: -10px;
+  left: 5px;
+  color: rgb(52, 52, 52);
+}
+
+.fpagamento {
+  position: relative;
+  display: block;
+  width: 180px;
+  height: 20px;
+  top: -30px;
+  left: 5px;
+  color: rgb(52, 52, 52);
+}
+
+.formasP {
+  position: relative;
+  display: block;
+  width: 180px;
+  height: 20px;
+  top: -20px;
+  left: 5px;
+  color: rgb(52, 52, 52);
+  border: none;
+  border-bottom: 0.5px solid rgb(210, 210, 210);
+  user-select: none;
+}
+
+.cartao{
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 20px;
+  top: -40px;
+  left: 200px;
+  color: rgb(52, 52, 52);
+  border: none;
+  border-bottom: 0.5px solid rgb(210, 210, 210);
+  user-select: none;
+}
+
+#itens {
+  position: absolute;
+  display: block;
+  width: 140px;
+  height: 20px;
+  left: 5px;
+  bottom: 10px;
+  text-align: left;
+  color: rgb(52, 52, 52);
+  user-select: none;
 }
 
 @media screen and (max-width: 500px) {
@@ -140,14 +267,6 @@ color: rgb(52, 52, 52);
     transition: 0.4s;
     top: 50px;
     width: 300px;
-    height: 100vh;
-    z-index: -3;
-  }
-
-  .compra:hover {
-    transition: 0.4s;
-    top: 50px;
-    width: 20vw;
     height: 100vh;
     z-index: -3;
   }
@@ -202,7 +321,6 @@ color: rgb(52, 52, 52);
     text-indent: 0%;
     color: rgb(97, 97, 97);
   }
-
 
   .titulo {
     width: 50px;
