--- a/frontend/src/app/components/views/category/category.component.css
+++ b/frontend/src/app/components/views/category/category.component.css
@@ -1,457 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Oswald&family=Yanone+Kaffeesatz:wght@500&display=swap');
-
-main {
-  /*Personaliza a area main dos produtos*/
-  position: relative;
-  display: block;
-  top: 7vh;
-  width: 100vw;
-  height: 2300px;
-  margin-bottom: 10px;
-}
-
-main::-webkit-scrollbar{
-  display: none;
-}
-
-.todosProdutos {
-  /*Inicio da grade de produtos*/
-  width: 90vw;
-  height: 1474px;
-  position: relative;
-  display: flex;
-  top: 100px;
-  left: 50%;
-  justify-content: center;
-  transform: translate(-50%);
-  border-bottom: 45px solid transparent;
-  flex-wrap: wrap;
-  overflow-y: auto;
-  color: white;
-  z-index: 1;
-  padding-bottom: 10px;
-}
-
-.todosProdutos::-webkit-scrollbar {
-  width: 0px;
-}
-
-.produto-single {
-  /*Container com todos os dados do produto*/
-  position: relative;
-  display: flex;
-  top: 25px;
-  width: 250px;
-  height: 350px;
-  margin: 15px;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  border-radius: 10px;
-  justify-content: space-between;
-  background-color: #ffffff;
-  overflow: hidden;
-  transition: 0.3s;
-  color: #000;
-  cursor: pointer;
-  border: 1px solid transparent;
-}
-
-.produto-single:hover {
-  transition: 0.5s;
-  border: 0.5px solid #3b3b3b;
-  box-shadow: #0040e2 0px 0.3px 10px 2px;
-}
-
-.produto-img img {
-  border-radius: 08px;
-  position: absolute;
-  max-width: 100%;
-  max-height: 60%;
-  top: 2%;
-  left: 7px;
-  display: flex;
-  transition: 0.8s;
-}
-
-.produto-img img:hover {
-  transition: 0.5s;
-  transform: scale(1.2);
-}
-
-.divisao {
-  position: absolute;
-  left: 2px;
-  top: 225px;
-  width: 100%;
-  height: 10px;
-  border-bottom: 1px solid rgb(214, 214, 214);
-}
-
-a {
-  color: #2a2a2a;
-}
-
-.produto-id{
-  position: absolute;
-  max-width: 100%;
-  max-height: 50%;
-  left: 10px;
-  bottom: 80px;
-  display: block;
-}
-
-.produto-descricao {
-  position: absolute;
-  max-width: 100%;
-  max-height: 50%;
-  left: 10px;
-  bottom: 60px;
-  display: block;
-}
-
-.produto-preco {
-  position: absolute;
-  max-width: 100%;
-  max-height: 50%;
-  left: 10px;
-  bottom: 40px;
-  display: block;
-}
-
-.produto-adicionar {
-  position: absolute;
-  background-color: rgb(0, 119, 255);
-  text-align: center;
-  width: 30px;
-  height: 20px;
-  right: 5px;
-  bottom: 36px;
-  border-radius: 10%;
-}
-
-.produto-remover {
-  position: absolute;
-  background-color: rgb(0, 119, 255);
-  text-align: center;
-  width: 30px;
-  height: 20px;
-  right: 5px;
-  bottom: 12px;
-  border-radius: 10%;
-}
-
-.produto-adicionar:active {
-  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
-  width: 26px;
-  height: 20px;
-  right: 7px;
-}
-
-.produto-remover:active {
-  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
-  width: 26px;
-  height: 20px;
-  right: 7px;
-}
-
-.produto-quantidade {
-  position: absolute;
-  width: 150px;
-  height: 30px;
-  text-align: justify;
-  bottom: 0px;
-  left: 15px;
-}
-
-.search-container {
+.atalhos {
   position: fixed;
-  background-color: rgb(255, 255, 255);
-  top: 10px;
-  width: 30vw;
-  height: 30px;
-  border: none;
-  transition: 0.4s;
-  border-radius: 150px;
-  padding-left: 20px;
-  left: 20vw;
-  z-index: 2;
-}
-
-.nomeProduto {
-  position: relative;
-  width: 100vw;
-  height: 40px;
-  top: 5px;
-  background-color: rgb(255, 255, 255);
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: rgb(255, 255, 255) 0px -7px 15px 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 30px;
-  font-weight: 500;
-}
-
-.produto-estoque {
-  position: absolute;
-  width: 150px;
-  height: 30px;
-  text-align: justify;
-  bottom: 0px;
-  left: 15px;
-  font-size: 10px;
-}
-
-.manual-bt1 {
-  border: transparent;
-  position: absolute;
-  width: 100px;
-  height: 200px;
-  top: 130px;
-  padding: 10px;
-  border-radius: 20px;
-  left: 2vw;
-  cursor: pointer;
-  transition: 1s;
-  background-color: transparent;
-}
-
-.manual-bt2 {
-  border: transparent;
-  position: absolute;
-  width: 100px;
-  height: 200px;
-  top: 130px;
-  padding: 10px;
-  border-radius: 20px;
-  right: 2vw;
-  cursor: pointer;
-  transition: 1s;
-  background-color: transparent;
-}
-
-#img{
-  width: 60%;
-  height: 80%;
-}
-
-.manual-bt1:hover, .manual-bt2:hover{
-  background-color: rgb(255, 234, 0);
-  transition: 0.9s;
-}
-
-.manual-bt1:active, .manual-bt2:active{
-  transform: scale(0.7);
-}
-
-.carrossel1 {
-  position: relative;
-  display: flex;
-  left: 50%;
-  justify-content: center;
-  transform: translate(-50%);
-  width: 80vw;
-  height: 400px;
-}
-
-.protutos-carrossel1, .protutos-carrossel2, .protutos-carrossel3, .protutos-carrossel4 {
-  position: absolute;
-  display: flex;
-  box-sizing: border-box;
-  width: 80vw;
-  height: 400px;
-  transition: 1.8s;
-}
-
-.card1 {
-  position: relative;
-  display: flex;
-  flex: none;
-  width: 220px;
-  height: 290px;
-  margin: 50.8px;
-  margin-left: 0.4px;
-  margin-top: 50px;
-  border-radius: 10px;
-  justify-content: space-between;
+  padding: 0;
+  margin: 0;
   background-color: #ffffff;
-  color: rgb(89, 88, 88);
-  cursor: pointer;
-  border: 2px solid transparent;
-  box-shadow: #343434 0px 0.3px 10px 2px;
-  transition: 1.6s;
-  z-index: 5;
+  top: 50px;
+  left: 0;
+  height: 100vh;
+  transition: 0.4s;
+  z-index: 95;
+  border-right: solid 1px rgb(0, 115, 255);
 }
 
-.card1:hover{
-  border: 2px solid #0040e2;
-  box-shadow: #0040e2 0px 0.3px 10px 2px;
-}
-
-#card1 {
-  margin-left: 40px;
-}
-
-.QuantprodutosLoja {
-  position: relative;
-  display: flex;
-  width: 80vw;
-  height: 55px;
-  left: 10vw;
-  color: rgb(255, 255, 255);
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  background-color: #272727;
-  border: transparent;
-  border-radius: 4px;
-  border-bottom: 1px solid #0090e4;
-  box-shadow: 0px 15px 20px 1px rgb(0, 0, 255);
-}
-
-.QuantprodutosLoja2 {
-  position: absolute;
-  display: flex;
-  width: 100vw;
-  height: 55px;
-  color: rgb(255, 255, 255);
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  background-color: #272727;
-  border: transparent;
-  border-radius: 4px;
-  border-bottom: 1px solid #008cff;
-  box-shadow: 0px 15px 2px 10px rgb(0, 0, 255);
-  z-index: 0;
-  bottom: 41px;
-}
-
-#paginacao {
-  position: absolute;
-  display: flex;
-  left: 67%;
-  justify-content: center;
-  width: 25vw;
-  height: 55px;
-  border-radius: 150px;
-  z-index: 3;
-}
-
-#itensPagina{
-  cursor: pointer;
-  position: absolute;
-  display: flex;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  height: 45px;
-  width: 55px;
-  right: 0px;
-  right: 35%;
-  background-color: #272727;
-  color: #ffffff;
-  border: transparent;
-  font-size: 20px;
-  top: 8px;
-}
-
-.prod{
-  display: flex;
-  position: relative;
-  left: 15px;
-  font-size: 20px;
-}
-
-.porPagina{
-  cursor: pointer;
-  position: absolute;
-  display: flex;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  height: 25px;
-  right: 44%;
-  font-size: 20px;
-  top: 18px;
-}
-
-#itensPagina:focus, input:focus {
-  box-shadow: 0 0 0 0;
-  outline: 0;
-}
-
-option{
-  background-color: #1d1d1d;
-}
-
-#button {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  vertical-align: middle;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto', sans-serif;
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 4vw;
-  height: 35px;
-  border-radius: 250px;
-  color: #9f9f9f;
-  border: solid wheat 0.5px;
-  border-color: #9f9f9f;
-  font-size: 20px;
-  top: 3px;
-  transition: 0.7s;
-  background-color: white;
-}
-
-#button2 {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  vertical-align: middle;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto', sans-serif;
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 20vw;
-  height: 37px;
-  border-radius: 250px;
-  color: #9f9f9f;
-  border: solid wheat 0.5px;
-  border-color: #9f9f9f00;
-  font-size: 20px;
-  top: 3px;
-  transition: 0.7s;
-}
-
-#button:hover {
-  background-color: rgb(0, 119, 255);
-  transition: 0.7s;
-  color: white;
-}
-
-#button:active {
-  transition: 0.3s;
-  transform: scale(0.8);
-}
-
-#button::before
-
-.list {
-  display: block;
-  align-items: center;
-  justify-content: center;
-  margin-top: 8px;
-}
-
-#paginacao .pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
+.fundoc  {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  height: 100vh;
+  transition: 0.4s;
+  z-index: 94;
+  background-color: rgba(255, 99, 71, 0.514);
 }
