--- a/frontend/src/app/components/views/produtos/produtos.component.css
+++ b/frontend/src/app/components/views/produtos/produtos.component.css
@@ -1,49 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Oswald&family=Yanone+Kaffeesatz:wght@500&display=swap');
 
-main {
-  /*Personaliza a area main dos produtos*/
-  position: relative;
-  display: block;
-  top: 7vh;
-  width: 100vw;
-  height: 2300px;
-  margin-bottom: 10px;
+* {
+  height: 100vh;
 }
 
-main::-webkit-scrollbar{
+main {
+  position: relative;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(51, 121, 153);
+}
+
+main::-webkit-scrollbar {
   display: none;
   top: 0;
 }
 
-.todosProdutos {
-  /*Inicio da grade de produtos*/
-  width: 90vw;
-  height: 1474px;
-  position: relative;
-  display: flex;
-  top: 100px;
-  left: 50%;
-  justify-content: center;
-  transform: translate(-50%);
-  border-bottom: 45px solid transparent;
-  flex-wrap: wrap;
-  overflow-y: auto;
-  color: white;
-  z-index: 1;
-  padding-bottom: 10px;
-}
-
-.todosProdutos::-webkit-scrollbar {
-  /*width: 0px;*/
-}
-
 .produto-single {
-  /*Container com todos os dados do produto*/
   position: relative;
   display: flex;
-  top: 25px;
-  width: 250px;
-  height: 350px;
+  top: 75px;
+  width: 70%;
+  height: 80%;
   margin: 15px;
   margin-top: 2px;
   margin-bottom: 2px;
@@ -57,11 +36,6 @@ main::-webkit-scrollbar{
   border: 1px solid transparent;
 }
 
-.produto-single:hover {
-  transition: 0.5s;
-  border: 0.5px solid #3b3b3b;
-  box-shadow: #0040e2 0px 0.3px 10px 2px;
-}
 
 .produto-img img {
   border-radius: 08px;
@@ -82,7 +56,7 @@ main::-webkit-scrollbar{
 .divisao {
   position: absolute;
   left: 2px;
-  top: 225px;
+  top: 320px;
   width: 100%;
   height: 10px;
   border-bottom: 1px solid rgb(214, 214, 214);
@@ -92,11 +66,11 @@ a {
   color: #2a2a2a;
 }
 
-.produto-id{
+.produto-id {
   position: absolute;
   max-width: 100%;
   max-height: 50%;
-  left: 10px;
+  left: 50%;
   bottom: 80px;
   display: block;
 }
@@ -105,7 +79,7 @@ a {
   position: absolute;
   max-width: 100%;
   max-height: 50%;
-  left: 10px;
+  left: 50%;
   bottom: 60px;
   display: block;
 }
@@ -114,7 +88,7 @@ a {
   position: absolute;
   max-width: 100%;
   max-height: 50%;
-  left: 10px;
+  left: 50%;
   bottom: 40px;
   display: block;
 }
@@ -232,17 +206,19 @@ a {
   background-color: transparent;
 }
 
-#img{
+#img {
   width: 60%;
   height: 80%;
 }
 
-.manual-bt1:hover, .manual-bt2:hover{
+.manual-bt1:hover,
+.manual-bt2:hover {
   background-color: rgb(255, 234, 0);
   transition: 0.9s;
 }
 
-.manual-bt1:active, .manual-bt2:active{
+.manual-bt1:active,
+.manual-bt2:active {
   transform: scale(0.7);
 }
 
@@ -256,7 +232,10 @@ a {
   height: 400px;
 }
 
-.protutos-carrossel1, .protutos-carrossel2, .protutos-carrossel3, .protutos-carrossel4 {
+.protutos-carrossel1,
+.protutos-carrossel2,
+.protutos-carrossel3,
+.protutos-carrossel4 {
   position: absolute;
   display: flex;
   box-sizing: border-box;
@@ -285,7 +264,7 @@ a {
   z-index: 5;
 }
 
-.card1:hover{
+.card1:hover {
   border: 2px solid #0040e2;
   box-shadow: #0040e2 0px 0.3px 10px 2px;
 }
@@ -340,7 +319,7 @@ a {
   z-index: 3;
 }
 
-#itensPagina{
+#itensPagina {
   cursor: pointer;
   position: absolute;
   display: flex;
@@ -358,14 +337,14 @@ a {
   top: 8px;
 }
 
-.prod{
+.prod {
   display: flex;
   position: relative;
   left: 15px;
   font-size: 20px;
 }
 
-.porPagina{
+.porPagina {
   cursor: pointer;
   position: absolute;
   display: flex;
@@ -378,12 +357,13 @@ a {
   top: 18px;
 }
 
-#itensPagina:focus, input:focus {
+#itensPagina:focus,
+input:focus {
   box-shadow: 0 0 0 0;
   outline: 0;
 }
 
-option{
+option {
   background-color: #1d1d1d;
 }
 
@@ -441,9 +421,7 @@ option{
   transform: scale(0.8);
 }
 
-#button::before
-
-.list {
+#button::before .list {
   display: block;
   align-items: center;
   justify-content: center;
