--- a/frontend/src/app/components/views/categoria/categoria.component.css
+++ b/frontend/src/app/components/views/categoria/categoria.component.css
@@ -1,3 +1,7 @@
+*{
+  height: 100vh;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Oswald&family=Yanone+Kaffeesatz:wght@500&display=swap');
 
 main {
@@ -280,21 +284,32 @@ a {
   font-size: 10px;
 }
 
-.QuantprodutosLoja {
-  position: absolute;
+.fundoCategoria {
+  position: relative;
   display: flex;
   width: 80vw;
   height: 55px;
-  left: 10vw;
+  padding: 0;
+  margin: 0;
+  top: 50px;
+  left: 50%;
+  justify-content: center;
+  transform: translate(-50%);
   color: rgb(255, 255, 255);
-  display: flex;
   align-items: center;
-  justify-content: left;
   background-color: #272727;
   border: transparent;
   border-radius: 4px;
   border-bottom: 1px solid #0090e4;
   box-shadow: 0px 15px 20px 1px rgb(0, 0, 255);
+}
+
+.categoria{
+  position: relative;
+  display: flex;
+  color: white;
+  padding: 0;
+  margin: 0;
 }
 
 .QuantprodutosLoja2 {
@@ -342,13 +357,6 @@ a {
   border: transparent;
   font-size: 20px;
   top: 8px;
-}
-
-.prod1{
-  display: flex;
-  position: relative;
-  left: 15px;
-  font-size: 20px;
 }
 
 .prod{
